syntax = "proto3";

import "transport_router.proto";

package TCProto;

message Stop {
    string name = 1;
    repeated string bus_names = 2;
};

message Bus {
    string name = 1;
    uint64 stop_count = 2;
    uint64 unique_stop_count = 3;
    uint64 road_route_length = 4;
    double orthodromic_route_length = 5;
};

message TransportCatalog {
    repeated Stop stops = 1;
    repeated Bus buses = 2;
    TransportRouter router = 3;
};
